Got client side js and UI animations working (sorta)

--- a/web/play.html
+++ b/web/play.html
@@ -100,7 +100,7 @@
 
              // Instead of evaluating the board just
              // return a random move (0-6 are valid columns)
-             return Math.floor(Math.rand() * 6);
+             return Math.floor(Math.random() * 6);
          }
        }
 })();
@@ -198,6 +198,8 @@
 </div>
 
 <!-- Javascript -->
+<script src="assets/js/jquery.gamequery-0.5.1.js"></script>
+<script src="assets/js/game-ui.js"></script>
 <script src="assets/js/c4.js"></script>
 
 <!-- Yodle Modal -->
