--- a/web/play.html
+++ b/web/play.html
@@ -7,7 +7,7 @@
 <head>
 	<!-- Meta  -->
 	<meta charset="UTF-8">
-	<title>C4 | Yodle</title>
+	<title>Four in a Row | Yodle</title>
 	<meta name="description" content="Description"/>
 	<meta name="robots" content="noindex,nofollow,noarchive" />
 
@@ -46,7 +46,7 @@
 			<div class="container_12">
 				<div class="main-col12 tablet-col9">
 					<a id="logo" href="http://www.yodle.com/"><img src="http://c336444.r44.cf1.rackcdn.com/logo.png" alt="Yodle Logo"></a>
-					<div id="siteTitle">C4</div>
+					<div id="siteTitle">Four in a Row</div>
 				</div>
 			</div>
 		</div>
@@ -94,12 +94,12 @@
 							<div class="formfield col6 tablet-col4 no-gutter">
 							<fieldset class="formfield">
 								<legend>Difficulty</legend>
-									<label><input type="radio" name="difficulty" value="1">Level 1</label>
+									<label><input type="radio" name="difficulty" value="1">Level 1 (Easiest)</label>
 									<label><input type="radio" name="difficulty" value="2">Level 2</label>
 									<label><input type="radio" name="difficulty" value="3">Level 3</label>
 									<label><input type="radio" name="difficulty" value="4">Level 4</label>
 									<label><input type="radio" name="difficulty" value="5">Level 5</label>
-									<label><input type="radio" name="difficulty" value="6">Level 6</label>
+									<label><input type="radio" name="difficulty" value="6">Level 6 (Hardest)</label>
 							</fieldset>
 							<input type="submit" class="primaryButton button" value="Run">
 						</form>
