got full game board resizing working for all scenarios

--- a/web/play.html
+++ b/web/play.html
@@ -182,7 +182,7 @@
 
 <!-- RSVP Modal -->
 <div id="gameStatusModal" class="main-col6 tablet-col6" style="display:none">
-	<div class="statusMessage success">
+	<div class="statusMessage">
 		<strong>You Win!</strong>
 		<p class="message"></p>
 		<p>Maybe you can work at Yodle. Email your resume to <a href="mailto:emailaddress">EmailAddress</a>.</p>
