got playing by hand working

--- a/web/play.html
+++ b/web/play.html
@@ -103,6 +103,12 @@
 											<option value="5">Level 5</option>
 											<option value="6">Level 6 (Hardest)</option>
 										</select>
+
+										<label forId="playManuallyCheck">
+											Play by hand?
+										</label>
+										<input id="playManuallyCheck" type="checkbox" />
+										</input>
 									</fieldset>
 									<input type="submit" class="primaryButton button" value="Run"/>
 							</form>
