added nickname input and now sending that to server as nickname

--- a/web/play.html
+++ b/web/play.html
@@ -94,7 +94,10 @@
 							<form id="inputCode" action="#" >
 								<div class="formfield col6 tablet-col4 no-gutter">
 									<fieldset class="formfield">
-										<legend>Difficulty</legend>
+                                        <label forId="nicknameInput">Nickname</label>
+                                        <input id="nicknameInput" type="text" value="Anonymous" />
+
+										<label>Difficulty</label>
 										<select id="difficultySelect">
 											<option value="1">Level 1 (Easiest)</option>
 											<option value="2">Level 2</option>
