--- a/web/index.html
+++ b/web/index.html
@@ -109,7 +109,8 @@
 						      <tr><td>moveList</td><td>An array containing the move history in ascending chronological order</td>
 						      <tr><td>ai</td><td>The opponent AI level</td>
 						      <tr><td>board</td><td>The current board state; a two-dimensional array with columns (left-to-right) on the first dimension and rows (top of the board at lowest index) on the second</td>
-						      <tr><td>error</td><td>A description of the error that has occurred. This is only defined when there is an error. Errors (like invalid moves) cause you to lose.</td>
+                                  <tr><td>message</td><td>A message describing the end of the game, or <strong>undefined</strong> if the game is not over.</td>
+                                  <tr><td>error</td><td>A description of the error that has occurred, or <strong>undefined</strong> if there is no error. Errors (like invalid moves) cause you to lose.</td>
 						    </tbody>
                                                   </table>
                                                 </p>
