--- a/web/index.html
+++ b/web/index.html
@@ -13,7 +13,7 @@
 
 	<!-- Stylesheets -->
 	<link rel="stylesheet" href="assets/css/reset-start.css">
-	<link rel="stylesheet" href="assets/css/c4.css">
+	<link rel="stylesheet" href="assets/css/four-in-a-row.css">
 	<link rel="stylesheet" href="assets/css/956.css">
 	<link rel="stylesheet" href="assets/css/reset-end.css">
 
@@ -236,12 +236,6 @@
 		</div>
 	</div>
 </footer>
-<!-- Javascript -->
-<script src="assets/js/c4.js"></script>
-
-<!-- Yodle Modal -->
-<script src="assets/yodle/ui/modal/modal.js"></script>
-<script src="assets/yodle/ui/lightbox/lightbox.js"></script>
 
 </body>
 </html>
