Updated pieces and fixed UI

--- a/web/index.html
+++ b/web/index.html
@@ -132,7 +132,7 @@
 					<section class="module listing clearfix">
 						<h3>Show Us What You Got</h3>
 						<p>Think you've got what it takes to match our engineers in a battle of wits? Take on the Yodle Four in a Row Challenge!</p>
-						<a class="button">Play</a>
+						<a href="play.html" class="button">Play</a>
 					</section>
 					<section class="module mediablock clearfix">
 						<h3>Tech Jobs at Yodle</h3>
