--- a/web/play.html
+++ b/web/play.html
@@ -92,11 +92,13 @@
 					<section class="module listing">
 						<div class="clearfix">
 							<form id="inputCode" action="#" >
-								<div class="formfield main-col4 no-gutter">
+								<div class="formfield main-col4 tablet-col3 no-gutter">
 									<label forId="nicknameInput">Nickname</label>
-                                    <input id="nicknameInput" type="text" value="Anonymous" />
+									<div class="field-wrapper">
+                                    	<input id="nicknameInput" type="text" value="Anonymous" />
+                                    </div>
 								</div>
-								<div class="formfield main-col4 no-gutter">
+								<div class="formfield main-col4 tablet-col3 no-gutter">
 									<label>Difficulty</label>
 									<select id="difficultySelect">
 										<option value="1">Level 1 (Easiest)</option>
@@ -143,17 +145,17 @@
 					<h4>Yodle Sites</h4>
 					<nav class="links">
 						<ul>
-													<li class="col2 no-gutter"><a  target="_blank"  href="http://www.yodle.com/">Yodle.com</a></li>
-													<li class="col2 no-gutter"><a  target="_blank"  href="http://www.yodlecareers.com/">Careers</a></li>
-													<li class="col2 no-gutter"><a  target="_blank"  href="http://www.yodle.net/">Company Blog</a></li>
-													<li class="col2 no-gutter"><a  target="_blank"  href="http://www.yodlefaq.com/">FAQ</a></li>
-													<li class="col2 no-gutter"><a  target="_blank"  href="http://www.yodle.info/">Local Business Blog</a></li>
-													<li class="col2 no-gutter"><a  target="_blank"  href="http://www.yodlereviews.com/">Yodle Reviews</a></li>
-													<li class="col2 no-gutter"><a  target="_blank"  href="http://www.yodlelawmarketing.com/">Yodle Law</a></li>
-													<li class="col2 no-gutter"><a  target="_blank"  href="http://brandstandards.yodle.com/">Brand Standards</a></li>
-													<li class="col2 no-gutter"><a  target="_blank"  href="http://www.yodledentalmarketing.com/">Yodle Dental</a></li>
-													<li class="col2 no-gutter"><a  href="http://www.yodle.com/partner-programs/">Partner Programs</a></li>
-												</ul>
+							<li class="col2 no-gutter"><a  target="_blank"  href="http://www.yodle.com/">Yodle.com</a></li>
+							<li class="col2 no-gutter"><a  target="_blank"  href="http://www.yodlecareers.com/">Careers</a></li>
+							<li class="col2 no-gutter"><a  target="_blank"  href="http://www.yodle.net/">Company Blog</a></li>
+							<li class="col2 no-gutter"><a  target="_blank"  href="http://www.yodlefaq.com/">FAQ</a></li>
+							<li class="col2 no-gutter"><a  target="_blank"  href="http://www.yodle.info/">Local Business Blog</a></li>
+							<li class="col2 no-gutter"><a  target="_blank"  href="http://www.yodlereviews.com/">Yodle Reviews</a></li>
+							<li class="col2 no-gutter"><a  target="_blank"  href="http://www.yodlelawmarketing.com/">Yodle Law</a></li>
+							<li class="col2 no-gutter"><a  target="_blank"  href="http://brandstandards.yodle.com/">Brand Standards</a></li>
+							<li class="col2 no-gutter"><a  target="_blank"  href="http://www.yodledentalmarketing.com/">Yodle Dental</a></li>
+							<li class="col2 no-gutter"><a  href="http://www.yodle.com/partner-programs/">Partner Programs</a></li>
+						</ul>
 					</nav>
 				</section>
 
@@ -201,9 +203,11 @@
 
 <!-- RSVP Modal -->
 <div id="gameStatusModal" class="main-col6 tablet-col6" style="display:none">
-	<div class="statusMessage">
-		<strong>You Win!</strong>
-		<p class="message"></p>
+	<div class="yo-modal-body">
+		<div class="statusMessage">
+			<strong>You Win!</strong>
+			<p class="message"></p>
+		</div>
 	</div>
 </div>
 
