change _id to id in the docs

--- a/web/index.html
+++ b/web/index.html
@@ -100,7 +100,7 @@
 								<dt class="head">Key</dt><dd class="head">Value</dd>
 								<dt>ROWS</dt><dd>The number of rows in the game board, always 6</dd>
 								<dt>COLS</dt><dd>The number of columns in the game board, always 7</dd>
-								<dt>_id</dt><dd>The unique game identifier, used in the other API methods. Note: this value is a string type.</dd>
+								<dt>id</dt><dd>The unique game identifier, used in the other API methods. Note: this value is a string type.</dd>
 								<dt>humanPlayer&nbsp;&nbsp;&nbsp;&nbsp;</dt><dd>Your player number (1 or 2), corresponding to the turn order</dd>
 								<dt>gameOver</dt><dd>0 if the game is not over, otherwise the winner's player number</dd>
 								<dt>nickname</dt><dd>The nickname you supplied to the init API, used for the leaderboard</dd>
