highlighting win position

--- a/web/play.html
+++ b/web/play.html
@@ -214,6 +214,7 @@
 <!-- Javascript -->
 <script src="assets/js/jquery.gamequery-0.5.1.js"></script>
 <script src="assets/js/game-ui.js"></script>
+<script src="assets/js/game-utils.js"></script>
 <script src="assets/js/four-in-a-row.js"></script>
 
 <!-- Yodle Modal -->
