--- a/web/index.html
+++ b/web/index.html
@@ -30,6 +30,7 @@
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
 	<script>window.jQuery || document.write("<script src='js/jquery-1.7.1.min.js'>\x3C/script>")</script>
 	<script src="assets/js/modernizr-2.5.3.min.js"></script>
+    <script src="assets/js/job-data.js"></script>
 </head>
 
 <body class="landingPage">
@@ -136,22 +137,7 @@
 					</section>
 					<section class="module mediablock clearfix">
 						<h3>Tech Jobs at Yodle</h3>
-						<ul>
-							<li>
-								<a href="">Data Architect</a>
-						  	</li>
-							<li>
-								<a href="">IT Analyst</a>
-						  	</li>
-						  	<li>
-								<a href="">Lead Engineer</a>
-						  	</li>
-						  	<li>
-								<a href="">Senior Software Engineer</a>
-						  	</li>
-						  	<li>
-								<a href="">Software Engineer</a>
-						  	</li>
+						<ul id="jobListings">
 						</ul>
 					</section>
 				</aside>
