--- a/web/play.html
+++ b/web/play.html
@@ -121,8 +121,8 @@
 						</div>
 						<div class="play-legend">
 							<h3>Legend</h3>
-							<div class="your-piece"><span class="piece"></span>= You</div>
-							<div class="ai-piece"><span class="piece"></span>= AI</div>
+							<div class="your-piece"><span class="piece"></span>= Challenger</div>
+							<div class="ai-piece"><span class="piece"></span>= Yodle</div>
 						</div>
 					</section>
 				</aside>
