fixing links to sample clients

--- a/web/index.html
+++ b/web/index.html
@@ -86,7 +86,9 @@
 						<p>There are three ways to play:</p>
 						<ul>
 							<li>Write a javascript AI in our <a href='play.html'>online code editor</a></li>
-							<li>Use one of the <a href="about:blank">Java</a>, <a href="about:blank">Python</a>, or <a href="about:blank">Ruby</a> clients</li>
+                            <li>Use one of the <a href="https://github.com/yodle/four-in-a-row/tree/master/clients/python">Python</a>, 
+                                or <a href="https://github.com/yodle/four-in-a-row/tree/master/clients/ruby">Ruby</a>
+                                or <a href="https://github.com/yodle/four-in-a-row/tree/master/clients/go">Go</a> clients</li>
 							<li>Roll your own in your language of choice against the Four in a Row Rest API</li>
 						</ul>
 					</section>
