--- a/web/play.html
+++ b/web/play.html
@@ -77,6 +77,9 @@
 				</header>
 				<!-- Main Content -->
 				<div class="main-col8 tablet-col6 clearfix border-right">
+					<div id="gameStatus" class="statusMessage">
+						<strong>Your Move</strong>
+					</div>
 					<section id="game-board" class="module mediablock">
 						<div id="board" class="clearfix;"></div>
 					</section>
@@ -128,12 +131,11 @@
 				</aside>
 				<!-- End Sidebar -->
 
-			</div> <!-- End container 12 -->
-
-			<div class="container_12 clearfix">
-				<h2>Input Code</h2>
-				<!-- Code editor -->
-				<div id="editor"></div>
+				<div class="main-col12 tablet-col9">
+					<h2>Input Code</h2>
+					<!-- Code editor -->
+					<div id="editor"></div>
+				</div>
 			</div>
 		</div><!-- End #container -->
 	</div><!-- End #content -->
