--- a/web/index.html
+++ b/web/index.html
@@ -130,7 +130,7 @@
 	                        	<strong>Example init request json:</strong>
 	                        	<code>
 	                        	{<br>
-	                        	nickname: {column number}<br>   
+	                        	nickname: "name or email"<br>   
 	                        	}</code>
 	                        </div>
                         </div>
@@ -143,7 +143,7 @@
 		                        <strong>Example move request json:</strong>
 		                        <code>
 		                        {<br>
-		                        move: {column number}<br>   
+		                        move: 3<br>   
 		                        }
 		                    	</code>
 	                    	</div>
